Gray-Space/src/objects/CH_Contract__c.object
<CustomObject>
    <fields>
        <fullName>CH_Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>CH_Doctor__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CH_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CH_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>CH_Hospital__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>CH_Contracts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CH_Part_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_Position__c</fullName>
        <label>Position</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CH_Supervisor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>CH_Doctor__c</referenceTo>
        <relationshipLabel>Contracts (Supervisor)</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CH_Doctor__c</columns>
        <columns>CH_Hospital__c</columns>
        <columns>CH_Start_Date__c</columns>
        <columns>CH_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CO-{0000}/{YYYY}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_date_cant_be_before_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>CH_Start_Date__c  &gt;  CH_End_Date__c</errorConditionFormula>
        <errorDisplayField>CH_End_Date__c</errorDisplayField>
        <errorMessage>End date can&apos;t be before start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>supervisor_has_to_be_different_than_doct</fullName>
        <active>true</active>
        <errorConditionFormula>CH_Supervisor__c = CH_Doctor__c</errorConditionFormula>
        <errorDisplayField>CH_Supervisor__c</errorDisplayField>
        <errorMessage>supervisor has to be different than doctor</errorMessage>
    </validationRules>
</CustomObject>